--- a/Index.html
+++ b/Index.html
@@ -69,14 +69,13 @@
 
     <div id="boxes"></div>
 
-    <script type="module" src="./js/task-01.js"></script>
-    <script type="module" src="./js/task-02.js"></script>
-    <script type="module" src="./js/task-03.js"></script>
-    <script type="module" src="./js/task-04.js"></script>
-    <script type="module" src="./js/task-05.js"></script>
-    <script type="module" src="./js/task-06.js"></script>
-    <script type="module" src="./js/task-07.js"></script>
-    <script type="module" src="./js/task-08.js"></script>
+    <script type="module" src="./js/task_1.js"></script>
+    <script type="module" src="./js/task_2.js"></script>
+    <script type="module" src="./js/task_3.js"></script>
+    <script type="module" src="./js/task_4.js"></script>
+    <script type="module" src="./js/task_5.js"></script>
+    <script type="module" src="./js/task_6.js"></script>
+    <script type="module" src="./js/task_7.js"></script>
 </body>
 
 </html>
